// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton component should display a single option with a checkbox parameter 1`] = `
<Fragment>
  <ForwardRef
    className="actionButton"
    id="action-button-4"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
    size="small"
    type="button"
  >
    <span
      id="action-button-4-tooltip-target"
    />
    <div>
      <i
        className="material-icons mr-2"
      >
        refresh
      </i>
       Little action
    </div>
  </ForwardRef>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="action-button-4"
    tether={
      Object {
        "constraints": Array [
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "scrollParent",
          },
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "window",
          },
        ],
      }
    }
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      <div>
        <i
          className="material-icons mr-2"
        >
          refresh
        </i>
        Execute my little action
      </div>
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <p
        className="popover"
      >
        This action is little, but it is powerful.
      </p>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <DEPRECATED_BooleanField
          className="mb-2"
          key="param"
          label="Execute the action for real"
          name="param"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <ForwardRef
          className="d-block"
          type="submit"
        >
          Confirm
        </ForwardRef>
      </Form>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`ActionButton component should display a single option with a number parameter 1`] = `
<Fragment>
  <ForwardRef
    className="actionButton"
    id="action-button-3"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
    size="small"
    type="button"
  >
    <span
      id="action-button-3-tooltip-target"
    />
    <div>
      <i
        className="material-icons mr-2"
      >
        refresh
      </i>
       Little action
    </div>
  </ForwardRef>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="action-button-3"
    tether={
      Object {
        "constraints": Array [
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "scrollParent",
          },
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "window",
          },
        ],
      }
    }
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      <div>
        <i
          className="material-icons mr-2"
        >
          refresh
        </i>
        Execute my little action
      </div>
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <p
        className="popover"
      >
        This action is little, but it is powerful.
      </p>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb-2"
          key="param"
          max={9}
          min={2}
          name="param"
          onChange={[Function]}
          placeholder="Just a param"
          required={true}
          step={0.1}
          type="number"
          value={7}
        />
        <ForwardRef
          className="d-block"
          type="submit"
        >
          Confirm
        </ForwardRef>
      </Form>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`ActionButton component should display a single option with a select parameter 1`] = `
<Fragment>
  <ForwardRef
    className="actionButton"
    id="action-button-5"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
    size="small"
    type="button"
  >
    <span
      id="action-button-5-tooltip-target"
    />
    <div>
      <i
        className="material-icons mr-2"
      >
        refresh
      </i>
       Little action
    </div>
  </ForwardRef>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="action-button-5"
    tether={
      Object {
        "constraints": Array [
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "scrollParent",
          },
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "window",
          },
        ],
      }
    }
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      <div>
        <i
          className="material-icons mr-2"
        >
          refresh
        </i>
        Execute my little action
      </div>
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <p
        className="popover"
      >
        This action is little, but it is powerful.
      </p>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <SelectField
          allowCustomValue={false}
          className="mb-2"
          fixedWidth={false}
          fullWidth={false}
          id={null}
          key="param"
          label="Execute the action for real"
          name="param"
          onChange={[Function]}
          onSearchChange={[Function]}
          options={
            Array [
              Object {
                "label": "Foo",
                "value": "foo",
              },
              Object {
                "label": "Bar",
                "value": "bar",
              },
            ]
          }
          placeholder="Select an option"
          required={false}
          singular="option"
          style={Object {}}
          type="select"
          value={true}
        />
        <ForwardRef
          className="d-block"
          type="submit"
        >
          Confirm
        </ForwardRef>
      </Form>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`ActionButton component should display a single option with a text parameter 1`] = `
<Fragment>
  <ForwardRef
    className="actionButton"
    id="action-button-2"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
    size="small"
    type="button"
  >
    <span
      id="action-button-2-tooltip-target"
    />
    <div>
      <i
        className="material-icons mr-2"
      >
        refresh
      </i>
       Little action
    </div>
  </ForwardRef>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="action-button-2"
    tether={
      Object {
        "constraints": Array [
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "scrollParent",
          },
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "window",
          },
        ],
      }
    }
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      <div>
        <i
          className="material-icons mr-2"
        >
          refresh
        </i>
        Execute my little action
      </div>
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <p
        className="popover"
      >
        This action is little, but it is powerful.
      </p>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb-2"
          key="param"
          name="param"
          onChange={[Function]}
          placeholder="Just a param"
          required={true}
          type="text"
          value="hello"
        />
        <ForwardRef
          className="d-block"
          type="submit"
        >
          Confirm
        </ForwardRef>
      </Form>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`ActionButton component should display a single option with no parameters 1`] = `
<Fragment>
  <ForwardRef
    className="actionButton"
    id="action-button-1"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
    size="small"
    type="button"
  >
    <span
      id="action-button-1-tooltip-target"
    />
    <div>
      <i
        className="material-icons mr-2"
      >
        refresh
      </i>
       Little action
    </div>
  </ForwardRef>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="action-button-1"
    tether={
      Object {
        "constraints": Array [
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "scrollParent",
          },
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "window",
          },
        ],
      }
    }
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      <div>
        <i
          className="material-icons mr-2"
        >
          refresh
        </i>
        Execute my little action
      </div>
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <p
        className="popover"
      >
        This action is little, but it is powerful.
      </p>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <ForwardRef
          className="d-block"
          type="submit"
        >
          Confirm
        </ForwardRef>
      </Form>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`ActionButton component should display multiple options with a common parameter 1`] = `
<Fragment>
  <ForwardRef
    className="actionButton"
    id="action-button-7"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
    size="small"
    type="button"
  >
    <span
      id="action-button-7-tooltip-target"
    />
    <div>
      <i
        className="material-icons mr-2"
      >
        refresh
      </i>
       Little action
    </div>
  </ForwardRef>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="action-button-7"
    tether={
      Object {
        "constraints": Array [
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "scrollParent",
          },
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "window",
          },
        ],
      }
    }
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      <div>
        <i
          className="material-icons mr-2"
        >
          refresh
        </i>
        Execute my little action
      </div>
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <p
        className="popover"
      >
        This action is little, but it is powerful.
      </p>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <Label
          key="label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Type
        </Label>
        <SelectField
          allowCustomValue={false}
          fixedWidth={false}
          fullWidth={false}
          id={null}
          key="input"
          onChange={[Function]}
          onSearchChange={[Function]}
          options={
            Array [
              Object {
                "label": "My little action",
                "value": "myLittleAction",
              },
              Object {
                "label": "My big action",
                "value": "myBigAction",
              },
            ]
          }
          placeholder="Select an option"
          required={false}
          singular="option"
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
          value="myLittleAction"
        />
        <InputField
          className="mb-2"
          key="param"
          name="param"
          onChange={[Function]}
          placeholder="Just a param"
          required={true}
          type="text"
          value="hello"
        />
        <ForwardRef
          className="d-block"
          type="submit"
        >
          Confirm
        </ForwardRef>
      </Form>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`ActionButton component should display multiple options with different parameter 1`] = `
<Fragment>
  <ForwardRef
    className="actionButton"
    id="action-button-8"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
    size="small"
    type="button"
  >
    <span
      id="action-button-8-tooltip-target"
    />
    <div>
      <i
        className="material-icons mr-2"
      >
        refresh
      </i>
       Little action
    </div>
  </ForwardRef>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="action-button-8"
    tether={
      Object {
        "constraints": Array [
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "scrollParent",
          },
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "window",
          },
        ],
      }
    }
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      <div>
        <i
          className="material-icons mr-2"
        >
          refresh
        </i>
        Execute my little action
      </div>
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <p
        className="popover"
      >
        This action is little, but it is powerful.
      </p>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <Label
          key="label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Type
        </Label>
        <SelectField
          allowCustomValue={false}
          fixedWidth={false}
          fullWidth={false}
          id={null}
          key="input"
          onChange={[Function]}
          onSearchChange={[Function]}
          options={
            Array [
              Object {
                "label": "My little action",
                "value": "myLittleAction",
              },
              Object {
                "label": "My big action",
                "value": "myBigAction",
              },
            ]
          }
          placeholder="Select an option"
          required={false}
          singular="option"
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
          value="myLittleAction"
        />
        <InputField
          className="mb-2"
          key="param"
          name="param"
          onChange={[Function]}
          placeholder="Just a param"
          required={true}
          type="text"
          value="hello"
        />
        <ForwardRef
          className="d-block"
          type="submit"
        >
          Confirm
        </ForwardRef>
      </Form>
    </PopoverBody>
  </Popover>
</Fragment>
`;

exports[`ActionButton component should display multiple options without parameters 1`] = `
<Fragment>
  <ForwardRef
    className="actionButton"
    id="action-button-6"
    intent="secondary"
    isDisabled={false}
    onClick={[Function]}
    size="small"
    type="button"
  >
    <span
      id="action-button-6-tooltip-target"
    />
    <div>
      <i
        className="material-icons mr-2"
      >
        refresh
      </i>
       Little action
    </div>
  </ForwardRef>
  <Popover
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="action-button-6"
    tether={
      Object {
        "constraints": Array [
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "scrollParent",
          },
          Object {
            "attachment": "together none",
            "pin": true,
            "to": "window",
          },
        ],
      }
    }
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      <div>
        <i
          className="material-icons mr-2"
        >
          refresh
        </i>
        Execute my little action
      </div>
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <p
        className="popover"
      >
        This action is little, but it is powerful.
      </p>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <Label
          key="label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Type
        </Label>
        <SelectField
          allowCustomValue={false}
          fixedWidth={false}
          fullWidth={false}
          id={null}
          key="input"
          onChange={[Function]}
          onSearchChange={[Function]}
          options={
            Array [
              Object {
                "label": "My little action",
                "value": "myLittleAction",
              },
              Object {
                "label": "My big action",
                "value": "myBigAction",
              },
            ]
          }
          placeholder="Select an option"
          required={false}
          singular="option"
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
          value="myLittleAction"
        />
        <ForwardRef
          className="d-block"
          type="submit"
        >
          Confirm
        </ForwardRef>
      </Form>
    </PopoverBody>
  </Popover>
</Fragment>
`;
